change to all lower

--- a/pages/SA-case-overview.html
+++ b/pages/SA-case-overview.html
@@ -297,7 +297,7 @@
       }
 
       function backDash(){
-            location.replace("SA-dashboard.html");
+            location.replace("sa-dashboard.html");
         }
 
       function saClient(){
