--- a/pages/login-SA.html
+++ b/pages/login-SA.html
@@ -70,7 +70,7 @@
     </a>
 
 
-    <a href="login-SA.html" class="block-link link-dark">
+    <a href="login-sa.html" class="block-link link-dark">
         <div class="bg-beige grow pt-3 d-flex justify-content-center align-items-center flex-column mx-2" style="height: 15vh;">
             <div class="d-flex justify-content-center">
                 <img src="../pictures/student.png" style="max-width: 2rem; height:auto; margin-bottom: 10px;">
