--- a/pages/otp.html
+++ b/pages/otp.html
@@ -185,7 +185,7 @@
                         if(response.code ==200){
                             sessionStorage.setItem("userID", response.data.user_id);
                             sessionStorage.setItem("saID", response.data.user_id);
-                            window.location.replace("SA-dashboard.html");
+                            window.location.replace("sa-dashboard.html");
                         }
                         });
                 }
