--- a/pages/pbc-dashboard.html
+++ b/pages/pbc-dashboard.html
@@ -212,7 +212,7 @@
                             <p class="col">`+assignedCase['client_name']+ `</p>
                             <p class="col">`+assignedCase['case_category']+`</p>
                             <p class="col"> <a href="pbc-case-overview.html" onclick="caseSession(`+assignedCase['case_id']+`,`+assignedCase['sa_id']+`,`+assignedCase['lawyer_id']+`)">`+assignedCase['case_id']+`</a></p>
-                            <p class="col"> <a href="view-SA.html" onclick="caseSession(`+assignedCase['case_id']+`,`+assignedCase['sa_id']+`,`+assignedCase['lawyer_id']+`)">`+ assignedCase['sa_name']+`</a></p>
+                            <p class="col"> <a href="view-sa.html" onclick="caseSession(`+assignedCase['case_id']+`,`+assignedCase['sa_id']+`,`+assignedCase['lawyer_id']+`)">`+ assignedCase['sa_name']+`</a></p>
                             <p class="col"> <a href="view-lawyer.html" onclick="caseSession(`+assignedCase['case_id']+`,`+assignedCase['sa_id']+`,`+assignedCase['lawyer_id']+`)">`+ assignedCase['lawyer_name'] +`</a></p>
                         </div>
                     </div>
